--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -88,6 +88,38 @@
               <div class="row text-center">
                 <div class="container">
                   <div class="btn btn-danger mt-4 mb-3 rounded-5" data-bs-toggle="modal" data-bs-target="#add-car-modal">Add New Car</div>
+
+                  <!-- Inventory TABLE -->
+                  <table class="table table-striped table-hover mt-4">
+                    <thead>
+                      <tr>
+                        <th scope="col">Inventory ID</th>
+                        <th scope="col">Make</th>
+                        <th scope="col">Model</th>
+                        <th scope="col">Year</th>
+                        <th scope="col">Color</th>
+                        <th scope="col">Mileage</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {{#cars}}
+                      <tr>
+                        <form method="POST" action="/dealer/delete-car">
+                        <th class="align-middle" scope="row">{{id}}</th>
+                        <td class="align-middle">{{make}}</td>
+                        <td class="align-middle">{{model}}</td>
+                        <td class="align-middle">{{year}}</td>
+                        <td class="align-middle">{{color}}</td>
+                        <td class="align-middle">{{mileage}}</td>
+                        <td class="align-middle">
+                          <button class="btn btn-secondary rounded-3">Delete</button>
+                        </td>
+                        </form>
+                      </tr>
+                      {{/cars}}
+                      
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
