--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -228,7 +228,46 @@
 
         <!-- REQUEST TAB -->
 
-        <div class="tab-pane fade" id="requests-tab-pane" role="tabpanel" aria-labelledby="requests-tab-pane">REQUEST TABLE</div>
+        <div class="tab-pane fade" id="requests-tab-pane" role="tabpanel" aria-labelledby="requests-tab-pane">
+          
+          <div class="container">
+
+            <!-- REQUEST TABLE -->
+            <table class="table table-striped table-hover mt-4">
+              <thead>
+                <tr>
+                  <th scope="col">Customer ID</th>
+                  <th scope="col">Make</th>
+                  <th scope="col">Model</th>
+                  <th scope="col">Year</th>
+                  <th scope="col">Color</th>
+                  <th scope="col">Max Mileage</th>
+                  <th scope="col">Requested On</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#requests}}
+                <tr>
+                  <form method="POST" action="/dealer/send-offer">
+                  <input type="hidden" value="{{ id }}" name="listingID"/>
+                  <th class="align-middle" scope="row">{{customerID}}</th>
+                  <td class="align-middle">{{make}}</td>
+                  <td class="align-middle">{{model}}</td>
+                  <td class="align-middle">{{year}}</td>
+                  <td class="align-middle">{{color}}</td>
+                  <td class="align-middle">{{maxMileage}}</td>
+                  <td class="align-middle">{{createdAt}}</td>
+                  <td class="align-middle">
+                    <button class="btn-sm rounded-3">Send an Offer</button>
+                  </td>
+                  </form>
+                </tr>
+                {{/requests}}
+              </tbody>
+            </table>
+          </div>
+
+        </div>
 
         <!-- OFFER TAB -->
 
