--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -239,7 +239,8 @@
                   <th scope="col">Customer ID</th>
                   <th scope="col">Make</th>
                   <th scope="col">Model</th>
-                  <th scope="col">Year</th>
+                  <th scope="col">Min Year</th>
+                  <th scope="col">Max Year</th>
                   <th scope="col">Color</th>
                   <th scope="col">Max Mileage</th>
                   <th scope="col">Requested On</th>
@@ -253,7 +254,8 @@
                   <th class="align-middle" scope="row">{{customerID}}</th>
                   <td class="align-middle">{{make}}</td>
                   <td class="align-middle">{{model}}</td>
-                  <td class="align-middle">{{year}}</td>
+                  <td class="align-middle">{{minYear}}</td>
+                  <td class="align-middle">{{maxYear}}</td>
                   <td class="align-middle">{{color}}</td>
                   <td class="align-middle">{{maxMileage}}</td>
                   <td class="align-middle">{{createdAt}}</td>
