--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -75,7 +75,10 @@
             <button class="nav-link" id="requests-tab" data-bs-toggle="tab" data-bs-target="#requests-tab-pane" type="button" role="tab" aria-controls="requests-tab-pane" aria-selected="false">Customer Requests</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="offers-tab" data-bs-toggle="tab" data-bs-target="#offers-tab-pane" type="button" role="tab" aria-controls="offers-tab-pane" aria-selected="false">My Offers</button>
+            <button class="nav-link" id="offers-tab" data-bs-toggle="tab" data-bs-target="#pending-offers-tab-pane" type="button" role="tab" aria-controls="offers-tab-pane" aria-selected="false">Pending Offers</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="offers-tab" data-bs-toggle="tab" data-bs-target="#accepted-offers-tab-pane" type="button" role="tab" aria-controls="offers-tab-pane" aria-selected="false">Accepted Offers</button>
           </li>
         </ul>
 
@@ -276,9 +279,13 @@
           </div>
         </div>
 
-        <!-- OFFER TAB -->
+        <!-- PENDING OFFERS TAB -->
 
-        <div class="tab-pane fade" id="offers-tab-pane" role="tabpanel" aria-labelledby="offers-tab-pane">OFFER TABLE</div>
+        <div class="tab-pane fade" id="pending-offers-tab-pane" role="tabpanel" aria-labelledby="pending-offers-tab-pane">OFFER TABLE</div>
+
+        <!-- ACCEPTED OFFERS TAB -->
+
+        <div class="tab-pane fade" id="accepted-offers-tab-pane" role="tabpanel" aria-labelledby="accepted-offers-tab-pane">ACCEPTED OFFER TABLE</div>
 
 
       </div>
