--- a/views/offer.mustache
+++ b/views/offer.mustache
@@ -115,6 +115,7 @@
                 <form method="POST" action="/dealer/send-offer">
                     <div class="row">
                         <div class="col-6">
+                      
                         <label for="make" class="form-label ">Make:</label>
                         <select class="form-control" id="make" name="make" required>
                         <option disabled selected hidden>Select Make</option>
@@ -178,8 +179,11 @@
                                 $<input type="number" min="0" max="100000" step="1" value="20000" name="price"/>
                             </div>
                         </div>
-                    </div>
-    
+                    </div> 
+                      {{#offerCustomer}}
+                        <input type="hidden" value= {{id}} name="customer2ID">
+                        <p>{{id}}</p>
+                        {{/offerCustomer}}
                     <div class="row justify-content-center">
                         <div class="col-4 mt-3">
                             <button class="btn btn-danger rounded-5">Send Offer</button>
