--- a/views/offer.mustache
+++ b/views/offer.mustache
@@ -75,14 +75,14 @@
         <div class="row justify-content-center">
             <div class="col-6 bg-light mt-4 rounded-3">
     
-                <div class="row justify-content-center">
+                <div class="row justify-content-center mt-2">
                     <h1>Create an Offer</h1>
                   </div>
                   
                   {{#request}} 
           
                     <div class="row justify-content-center">
-                        <div class="col-12 mt-5">
+                        <div class="col-12 mt-4">
                             <div class="row justify-content-center">
                                 {{#customer}}
                                 <h2>Customer: {{firstName}} {{lastName}}</h2>
@@ -115,7 +115,7 @@
                 {{#request}}
                 <form method="POST" action="/dealer/send-offer/{{customerID}}/{{id}}">
                 {{/request}}
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-6">
                         <label for="make" class="form-label ">Make:</label>
                         <select class="form-control" id="make" name="make" required>
@@ -180,8 +180,45 @@
                                 $<input type="number" min="0" max="100000" step="1" value="20000" name="price"/>
                             </div>
                         </div>
-                    </div>
-    
+                    </div> -->
+                    
+
+                    <h4 class="mt-2">Inventory Cars</h4>
+                    <table class="table table-striped table-hover mt-4">
+                      <thead>
+                        <tr>
+                          <th scope="col">Listing ID</th>
+                          <th scope="col">Make</th>
+                          <th scope="col">Model</th>
+                          <th scope="col">Year</th>
+                          <th scope="col">Color</th>
+                          <th scope="col">Mileage</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{#inventory}}
+                        <tr>
+                          <input type="hidden" value="{{ id }}" name="listingID"/>
+                          <th class="align-middle" scope="row">{{id}}</th>
+                          <td class="align-middle" id="make" name="make">{{make}}</td>
+                          <td class="align-middle" id="model" name="model">{{model}}</td>
+                          <td class="align-middle" id="year" name="year">{{year}}</td>
+                          <td class="align-middle" id="color" name="color">{{color}}</td>
+                          <td class="align-middle" id="mileage" name="mileage">{{mileage}}</td>
+                          <td class="align-middle">
+                            <div class="form-check align-middle">
+                              <input class="form-check-input" type="radio" name="offeredCar" id="offeredCar">
+                              <label class="form-check-label" for="offeredCar">
+                               
+                              </label>
+                            </div>
+                          </td>
+                          </form>
+                        </tr>
+                        {{/inventory}}
+                      </tbody>
+                    </table>
+
                     <div class="row justify-content-center">
                         <div class="col-4 mt-3">
                             <button class="btn btn-danger rounded-5">Send Offer</button>
