--- a/views/offer.mustache
+++ b/views/offer.mustache
@@ -113,76 +113,10 @@
         <div class="row justify-content-center">
             <div class="col-6 bg-light mt-4 rounded-3">
                 {{#request}}
+                {{#inventory}}
                 <form method="POST" action="/dealer/send-offer/{{customerID}}/{{id}}">
-                {{/request}}
-                    <!-- <div class="row">
-                        <div class="col-6">
-                        <label for="make" class="form-label ">Make:</label>
-                        <select class="form-control" id="make" name="make" required>
-                        <option disabled selected hidden>Select Make</option>
-                        <option>Toyota</option>
-                        <option>Honda</option>
-                        <option>Ford</option>
-                        <option>Volkswagen</option>
-                        </select>
-                        </div>
-    
-                        <div class="col-6">
-                        <label for="model" class="form-label">Model:</label>
-                        <select class="form-control" id="model" name="model" required>
-                        <option disabled selected hidden>Select Model</option>
-                        <option>Camry</option>
-                        <option>Accord</option>
-                        <option>Explorer</option>
-                        <option>Jetta</option>
-                        </select>
-                        </div>
-                    </div>
-    
-                    <div class="row mt-4">
-    
-                        <div class="col-6">
-                        <label for="year" class="form-label">Year:</label>
-                            <div class= "form-control" id="year" name="year" required>
-                            <input type="number" min="1980" max="2023" step="1" value="2022" name="year"/>
-                            </div>
-                        </div>
-    
-                        <div class="col-6">
-                        <label for="color" class="form-label">Color:</label>
-                        <select class="form-control" id="color" name="color" required>
-                        <option disabled selected hidden>Select Color</option>
-                        <option>White</option>
-                        <option>Black</option>
-                        <option>Gray</option>
-                        <option>Red</option>
-                        <option>Blue</option>
-                        <option>Silver</option>
-                        </select>
-                        </div>
-    
-                    </div>
-    
-                    <div class="row justify-content-center text-center mt-4">
-                        <div class="col-6 mb-3">
-                        
-                            <label for="mileage" class="form-label">Mileage: </label>
-                            <output id ="result">50000</output>
-                            <input type="range" class="form-range" min="0" max="250000" id="send" oninput= "result.value = send.value" name="mileage" value="50000">  
-    
-                    </div>
-    
-                    <div class="row mt-4 justify-content-center">
-    
-                        <div class="col-6">
-                            <label for="price" class="form-label">Price:</label>
-                            <div class= "form-control" id="offer-price" name="price" required>
-                                $<input type="number" min="0" max="100000" step="1" value="20000" name="price"/>
-                            </div>
-                        </div>
-                    </div> -->
+                <!-- {{/request}} -->
                     
-
                     <h4 class="mt-2">Inventory Cars</h4>
                     <table class="table table-striped table-hover mt-4">
                       <thead>
@@ -196,15 +130,25 @@
                         </tr>
                       </thead>
                       <tbody>
-                        {{#inventory}}
+
+                        
+
+                        <input type="hidden" value="{{ make }}" name="make"/>
+                        <input type="hidden" value="{{ model }}" name="model"/>
+                        <input type="hidden" value="{{ year }}" name="year"/>
+                        <input type="hidden" value="{{ color }}" name="color"/>
+                        <input type="hidden" value="{{ mileage }}" name="mileage"/>
+                        <input type="hidden" value="{{ price }}" name="price"/>
+
+                        <!-- {{#inventory}} -->
                         <tr>
-                          <input type="hidden" value="{{ id }}" name="listingID"/>
+                          <!-- <input type="hidden" value="{{ id }}" name="listingID"/> -->
                           <th class="align-middle" scope="row">{{id}}</th>
-                          <td class="align-middle" id="make" name="make">{{make}}</td>
-                          <td class="align-middle" id="model" name="model">{{model}}</td>
-                          <td class="align-middle" id="year" name="year">{{year}}</td>
-                          <td class="align-middle" id="color" name="color">{{color}}</td>
-                          <td class="align-middle" id="mileage" name="mileage">{{mileage}}</td>
+                          <td class="align-middle">{{make}}</td>
+                          <td class="align-middle">{{model}}</td>
+                          <td class="align-middle">{{year}}</td>
+                          <td class="align-middle">{{color}}</td>
+                          <td class="align-middle">{{mileage}}</td>
                           <td class="align-middle">
                             <div class="form-check align-middle">
                               <input class="form-check-input" type="radio" name="offeredCar" id="offeredCar">
@@ -213,18 +157,20 @@
                               </label>
                             </div>
                           </td>
-                          </form>
-                        </tr>
-                        {{/inventory}}
-                      </tbody>
-                    </table>
+                        </form>
+                      </tr>
+                    </tbody>
+                  </table>
 
                     <div class="row justify-content-center">
                         <div class="col-4 mt-3">
                             <button class="btn btn-danger rounded-5">Send Offer</button>
                         </div>
                     </div>
+                    
                 </form>
+                {{/inventory}}
+                {{/request}}
             </div>
 
         </div>
