--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -331,7 +331,7 @@
 
         <div class="tab-pane fade" id="accepted-offers-tab-pane" role="tabpanel" aria-labelledby="accepted-offers-tab-pane">
 
-          <!-- PENDING OFFERS TABLE -->
+          <!-- ACCEPTED OFFERS TABLE -->
           <table class="table table-striped table-hover mt-4">
             <thead>
               <tr>
